added ktx/octree/raw paths to TmSample